--- a/article/2017/20171231.md
+++ b/article/2017/20171231.md
@@ -9,12 +9,12 @@
 
   就如齐鲁交通发展集团董事长徐春福所说：“这是整个的一个大的跨界的融合，我感到也是一个前瞻性的，也带某种程度颠覆性的革命。”
 
-On December 28, 2017, the world's first photovoltaic （太阳能光伏) highway which has China's fully independent intellectual property rights （自主知识产权） has been developed and laid in Jinan. At present, the road surface has been laid, some vehicles (车辆) have begun to test on the road surface. So, how amazing is this road? What will happen when the transportation and the new energy technology combine (结合) together?
+On December 28, 2017, the world's first _photovoltaic_(太阳能光伏) highway which has China's fully _independent intellectual property rights_(自主知识产权) has been developed and laid in Jinan. At present, the road surface has been laid, some _vehicles_(车辆) have begun to test on the road surface. So, how amazing is this road? What will happen when the transportation and new energy technology _combine_(结合) together?
 
-The full name of this road is Carrying High Speed  Road. Its surface is semi-transparent (半透明的) new material like the wool glass, the friction coefficient (摩擦系数) is higher than the traditional road. It can not only make sure that the car won't slip, but also allows sunlight to penetrat well. The cell under the road converts light into electricity, at the same time, it can put the electricity onto the powerline, just like a huge "Power Bank". In winter, the road can also convert light into heat, melting （融化) snow and keeping driving safety. 
+The full name of this road is Carrying High Speed Road. Its surface is _semi-transparent_(半透明的) new material like the wool glass, its _friction coefficient_(摩擦系数) is higher than the traditional road. It can not only make sure that the car won't slip, but also allows sunlight to penetrat well. The cell under the road converts light into electricity, at the same time, it can put the electricity onto the powerline, just like a huge "Power Bank". In winter, the road can also convert light into heat, _melting_(融化) snow and keeping driving safety. 
 
-Currently, electromagnetic induction coil (电磁感应线圈) is also reserved under the road surface. In the future, with the wireless charging technology, electric cars can be  charge while running along the road, and no longer need to worry about the low battery. 
+Currently, _electromagnetic induction coils_(电磁感应线圈) have been also reserved under the road surface. In the future, with the wireless charging technology, electric cars can be charged while running along the road, and no longer need to worry about the low battery. 
 
 In addition, this road can not only convert light into electricity, but the reserved information port can also connect all kinds of information collection devices, information can be converted to traffic big data, such as vehicle information, road condition, etc.. The big data will become a part of intelligent city. 
 
-As Xu Chunfu, the chairman of the Qilu Traffic Development Group say: "This is a large crossover (跨界合作), I feel like this is a forward-looking, also with a certain subversive revolution."
+As Xu Chunfu, the chairman of the Qilu Traffic Development Group say: "This is a large _crossover_(跨界合作), I feel like this is forward-looking, also with a certain subversive revolution."
