--- a/_posts/2017-12-31-我国首条承载式光伏公路建成通车.md
+++ b/_posts/2017-12-31-我国首条承载式光伏公路建成通车.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: "我国首条承载式光伏公路建成通车"
+image: cards.jpg
+---
+
 # 20171231-我国首条承载式光伏公路建成通车
   2017年12月28日，由我国完全自主知识产权研发与铺设的全球首段光伏高速公路在山东济南亮相。目前，半透明的路面已铺设完毕，一些车辆已经开始在路面上进行测试。那么，这段公路到底有多神奇？交通产业跟新能源产业组合在一起，又会会擦出什么样的火花？
 
